crates/rspyts-macros/tests/ui/unknown_key.stderr
error: unknown #[bridge] argument; expected `error`, `constructor`, `static`, `tag = "…"`, `rename_all = "…"`, or `target = "…"`
 --> tests/ui/unknown_key.rs:3:10
  |
3 | #[bridge(frobnicate)]
  |          ^^^^^^^^^^
